on request approval show email of author

--- a/donate/static/templates/mydonations.html
+++ b/donate/static/templates/mydonations.html
@@ -3,7 +3,7 @@
     <table class="table">
         <p>
             <a href="#/donate/edit/new">
-                <p>Click here to add more</p>
+                <p>Click here to add a donation</p>
             </a>
             <tbody>
                 <tr>
