--- a/donate/static/templates/request_list.html
+++ b/donate/static/templates/request_list.html
@@ -1,4 +1,4 @@
-    <div class="containerBig">
+<div class="container containerBig">
         <h1>These are the urgent needs, can you help?</h1>
         <p><a href="#/request/edit/new"><p>Click here to request an item</p></a>
         <table class="table">
