--- a/donate/static/templates/donate_edit.html
+++ b/donate/static/templates/donate_edit.html
@@ -1,7 +1,7 @@
 
     <div class="container containerBig">
             <h1 class="text-center">Enter your donation</h1>
-    <a href="#/donate"><p> Back to donation list</p></a>
+    <a href="#/donations"><p> Back to donation list</p></a>
         <form ng-submit="add(donate)">
         <div class="row">
         <div class="col-sm-6">
