--- a/donate/static/templates/interestedDirective.html
+++ b/donate/static/templates/interestedDirective.html
@@ -1,12 +1,10 @@
-<table class="table">
-    <tbody>
-        <tr ng-repeat="d in donatematches">
-            <td ng-bind="d.interested.username"></td>
-            <td>{{ d.interested.first_name }} {{ d.interested.last_name }}</td>
-            <td>
-                <button ng-if="d.approve_contact == false" ng-click="approve(d)">Approve </button>
-                <button ng-if="d.approve_contact == true" ng-click="disapprove(d)">Remove Approval </button>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div>
+    <p ng-repeat="d in donatematches">
+    <span ng-bind="d.interested.username"></span>
+    <span>{{ d.interested.first_name }} {{ d.interested.last_name }} --  </span>
+    
+        <button ng-if="d.approve_contact == false" ng-click="approve(d)">Approve </button>
+        <button ng-if="d.approve_contact == true" ng-click="disapprove(d)">Remove Approval </button>
+    </p>
+
+    </div>
