--- a/donate/static/templates/landing.html
+++ b/donate/static/templates/landing.html
@@ -63,7 +63,7 @@
             <div class="container">
                 <h2>Stop waiting.<br>Start giving.</h2>
                  <a ng-if="!isLoggedIn" href="/#/register" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
-                 <a ng-if="isLoggedIn" href="/#/donate" class="btn btn-outline btn-xl page-scroll">Let's Donate Today!</a>
+                 <a ng-if="isLoggedIn" href="/#/donations" class="btn btn-outline btn-xl page-scroll">Let's Donate Today!</a>
 
             </div>
         </div>
