--- a/donate/static/templates/welcome.html
+++ b/donate/static/templates/welcome.html
@@ -12,7 +12,7 @@
 					<div class="header-content">
                         <div class="header-content-inner">
       						<h1>What would you like to do? </h1>
-     						<a class="btn btn-outline btn-xl page-scroll ng-scope" href="#/donate"><h2> Donate</h2></a>
+     						<a class="btn btn-outline btn-xl page-scroll ng-scope" href="#/donations"><h2> Donate</h2></a>
           					<a class="btn btn-outline btn-xl page-scroll ng-scope" href="#/request"><h2>Request</h2></a>
      					</div>
 					</div>
