--- a/donate/templates/donate/index2.html
+++ b/donate/templates/donate/index2.html
@@ -10,7 +10,7 @@
   <nav>
     <a href="#/login">Login</a>
     <a href="#/register">Register</a>
-    <a href="#/donate">Donate</a>
+    <a href="#/donations">Donate</a>
     <a href="#/request">Requests</a>
   </nav>
   <div ng-view="">
