--- a/donate/static/templates/helpDirective.html
+++ b/donate/static/templates/helpDirective.html
@@ -1,13 +1,11 @@
-<table class="table">
-        <tbody>
-            <tr ng-repeat="r in requestmatches">
-                <td ng-bind="r.interested.username"></td>
-                <td>{{ r.interested.first_name }} {{ r.interested.last_name }}</td>
-                <td>
-                    <button ng-if="r.approve_contact == false" ng-click="approve(r)">Approve </button>
-                    <button ng-if="r.approve_contact == true" ng-click="disapprove(r)">Remove Approval </button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+<div >
+    <p ng-repeat="r in requestmatches">
+        <span ng-bind="r.interested.username"></span>
+        <span>{{ r.interested.first_name }} {{ r.interested.last_name }} --  </span>
+        <span>
+            <button ng-if="r.approve_contact == false" ng-click="approve(r)">Approve </button>
+            <button ng-if="r.approve_contact == true" ng-click="disapprove(r)">Remove Approval </button>
+        </span>
+    </p>
+ </div>
     
