--- a/donate/static/templates/request_list.html
+++ b/donate/static/templates/request_list.html
@@ -1,29 +1,19 @@
 <div class="container containerBig">
         <h1>These are the urgent needs, can you help?</h1>
         <p><a href="#/request/edit/new"><p>Click here to request an item</p></a>
-        <table class="table">
-            <tr>
-                <th>Posted Date</th>
-                <th>Item</th>
-                <th>Details</th>
-                <th>Location</th> 
-                <th>category</th>
-                <!-- <th>subcategory</th> -->
-                <!-- <th>Author</th> -->
-            </tr>
-            <tr ng-repeat="r in requests">
-                <td ng-bind="r.published_date|date"></td>
-                <td ng-bind="r.item"></td>
-                <td ng-bind="r.details"></td>
-                <td>
+        <div class="col-xs-3 well" style="margin:1em;" ng-repeat="r in requests">
+                <h2>{{ r.item }}</h2>
+                <p ng-bind="r.published_date|date"></p>                
+                <span>{{ r.category.title }}</span>
+                <p ng-bind="r.details"></p>
+                <span>
                     <a target="_blank" ng-href="{{ r.mapUrl }}">View Map</a>
-                </td> 
-                <td>{{ r.category.title }} - {{ r.subcategory.title }}</td>
-               <!--  <td ng-bind="r.author.username"></td> -->
-                <td>
+                </span> 
+                <p>{{ r.category.title }} - {{ r.subcategory.title }}</p>
+                <p>
                     <button ng-if="user.u === r.author.username" type="button" class="btn btn-outline darkbtn" ng-click="remove(r)">Delete</button>
-                    <button ng-if="user.u !== r.author.username" type="button" class="btn btn-outline darkbtn" ng-click="interested(r)">I can help</button>
-                </td>
-            </tr>
-        </table>
+                    <button ng-if="user.u !== r.author.username" type="button" class="btn btn-outline darkbtn" ng-click="interested(r)">I'm interested</button>
+                </p>
+            
+           </div>
     </div>
