--- a/donate/static/templates/donate_edit.html
+++ b/donate/static/templates/donate_edit.html
@@ -1,47 +1,50 @@
-
-    <div class="container containerBig">
-            <h1 class="text-center">Enter your donation</h1>
-    <a href="#/donations"><p> Back to donation list</p></a>
+<div class="container containerBig">
+    <h1 class="text-center">Enter your donation</h1>
+    <a href="#/donations">
+        <p> Back to donation list</p>
+    </a>
+    <div class="well">
         <form ng-submit="add(donate)">
-        <div class="row">
-        <div class="col-sm-6">
-        <h2>Item Information</h2>
-            <p>
-                <label>Item: </label>
-                <input type="text" ng-model="donate.item" placeholder="Enter your item">
-            </p>
-            <p>
-                <label>Details: </label>
-                <input type="text" ng-model="donate.details" placeholder="Enter your details">
-            </p>
-            <p>
-                <label>Condition choice: </label>
-                <select ng-model="donate.condition">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h2>Item Information</h2>
+                    <p>
+                        <label>Item: </label>
+                        <input type="text" ng-model="donate.item" placeholder="Enter your item">
+                    </p>
+                    <p>
+                        <label>Details: </label>
+                        <input type="text" ng-model="donate.details" placeholder="Enter your details">
+                    </p>
+                    <p>
+                        <label>Condition choice: </label>
+                        <select ng-model="donate.condition">
                     <option data-ng-repeat="v in fields.condition.choices">{{v}}</option>
                 </select>
-            </p>
-            <p>
-                <label>Category choice: </label>
-                <select ng-model="categorySelected" ng-change="getSubCategories(categorySelected)">
+                    </p>
+                    <p>
+                        <label>Category choice: </label>
+                        <select ng-model="categorySelected" ng-change="getSubCategories(categorySelected)">
                     <option data-ng-repeat="cat in categories" ng-value="{{cat}}" >{{cat.title}}</option>
                 </select>
-            </p>
-            <p ng-show="donate.category">
-                <label>SubCategory choice: </label>
-                <select ng-model="donate.subcategory">
+                    </p>
+                    <p ng-show="donate.category">
+                        <label>SubCategory choice: </label>
+                        <select ng-model="donate.subcategory">
                     <option data-ng-repeat="sub in subcategories" value="{{sub.resource_uri}}">{{sub.title}}</option>
                 </select>
-            </p>
-            <p><label> Image: </label>
-                <input class="btn" type="file" file-model="donate.image"/>
-            </p>
+                    </p>
+                    <p><label> Image: </label>
+                        <input class="btn" type="file" file-model="donate.image" />
+                    </p>
+                </div>
+                <div class="col-sm-6">
+                    <p><label> Location: </label>
+                        <map location="donate.location" editable="true"></map>
+                    </p>
+                </div>
+                <button class="btn btn-outline darkbtn" type="submit">Save</button>
             </div>
-            <div class="col-sm-6">
-            <p><label> Location: </label>
-                <map location="donate.location" editable="true"></map>
-            </p>
-            </div>
-            <button class="btn btn-outline darkbtn" type="submit">Save</button>
-        </div>
         </form>
     </div>
+</div>
