drf updates for login

--- a/donate/templates/donate/index.html
+++ b/donate/templates/donate/index.html
@@ -136,7 +136,8 @@
     <script src="/static/vendor/jquery/jquery.min.js"></script>
     <script src="/static/vendor/angular/angular.min.js"></script>
     <script src="/static/vendor/angular/angular-route.min.js"></script>
-
+    <script src="/static/vendor/angular/angular-cookies.min.js"></script>
+    
     <!-- Bootstrap Core JavaScript -->
     <script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
 
