--- a/donate/static/templates/donate_detail.html
+++ b/donate/static/templates/donate_detail.html
@@ -8,9 +8,10 @@
 				<h1>{{ donate.item }}</h1>
 				<img class="img-responsive" ng-src="{{ donate.image }}" />
 				<p>Item Details: {{ donate.details }}<br> Condition: {{ donate.condition }}
-				<p><button ng-if="user.u !== donate.author.username" type="button" class="btn btn-outline darkbtn" ng-click="interested(donate)">I'm interested</button>
-				<button ng-if="user.u === donate.author.username" type="button" class="btn btn-outline darkbtn float-right" ng-click="remove(donate)">Delete</button></p>
-
+				<p><button ng-if="!interest && user.u !== donate.author.username" type="button" class="btn btn-outline darkbtn" ng-click="interested(donate)">I'm interested</button>
+				<button ng-if="interest" type="button" class="btn btn-outline darkbtn float-right" ng-click="removeInterest()">Remove Interest</button></p>
+                <button ng-if="user.u === donate.author.username" type="button" class="btn btn-outline darkbtn" ng-click="remove(donate)">Delete</button>
+				
 				
 			</div>
 			<div class="col-md-6">
