--- a/donate/static/templates/request_list.html
+++ b/donate/static/templates/request_list.html
@@ -3,17 +3,17 @@
         <p><a href="#/request/edit/new"><p>Click here to request an item</p></a>
         <div class="col-xs-3 well" style="margin:1em;" ng-repeat="r in requests">
                 <h2>{{ r.item }}</h2>
-                <p ng-bind="r.published_date|date"></p>                
+                <p ng-bind="r.published_date|date"></p>
                 <span>{{ r.category.title }}</span>
                 <p ng-bind="r.details"></p>
                 <span>
                     <a target="_blank" ng-href="{{ r.mapUrl }}">View Map</a>
-                </span> 
+                </span>
                 <p>{{ r.category.title }} - {{ r.subcategory.title }}</p>
                 <p>
                     <button ng-if="user.u === r.author.username" type="button" class="btn btn-outline darkbtn" ng-click="remove(r)">Delete</button>
-                    <button ng-if="user.u !== r.author.username" type="button" class="btn btn-outline darkbtn" ng-click="interested(r)">I'm interested</button>
+                    <button ng-if="user.u !== r.author.username" type="button" class="btn btn-outline darkbtn" ng-click="interested(r)">I can Help</button>
                 </p>
-            
+
            </div>
     </div>
